Deploy in github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rvp15.github.io/ratemyteam",
+  "homepage": "http://rvp15.github.io/ratemyteam",
   "name": "ratemyteam",
   "version": "0.1.0",
   "private": true,
