--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
